--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 										</ul>
 										<ol>
 											<li>Implemented on-the-ground perspective with aerial perspectives using satellite imagery
-												in ArcGIS to conduct spatial analyses with a higher accuracy.</li>
+												in ArcGIS to conduct spatial analyses with higher accuracy.</li>
 										</ol>
 										<ul>											
 										
@@ -317,7 +317,7 @@
 												gaps in corridor ecology and understand the conservation value of corridors.</li>
 										</ul>
 										<ol>
-											<li>Thoroughly maintained record of methodological approaches and troubleshooting.</li>
+											<li>Thoroughly maintained records of methodological approaches and troubleshooting.</li>
 										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2022<br> - <br>December 2022</td>
@@ -326,12 +326,12 @@
 									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
 									<i>Tiger (<i>Panthera tigris</i>) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 									<ul>
-										<li>Debugged scripts for statistical analyses; promptly shared with colleagues.</li>
+										<li>Debugged scripts for statistical analyses; promptly shared them with colleagues.</li>
 										<li>Produced cartographic products following journal guidelines using ArcGIS.</li>
 										<li>Produced a publishable unit (in progress) from an assignment in a graduate Conservation Biology course.</li>
 										<li>Reviewed pertinent literature to collect species demographic data for statistical analyses.</li>
 										<li>Managed a non-spatial database in a collaborative workspace environment.</li>
-										<li>Assessed the influence varying levels of human disturbance has on viability of 3 tiger populations.</li>
+										<li>Assessed the influence varying levels of human disturbance have on the viability of three geographically distinct tiger populations.</li>
 									</ul>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
@@ -343,7 +343,7 @@
 											<li>Optimized >2,400 spatial data points; developed scripts for statistical analyses and uniform data visualization.</li>
 											<li>Managed a non-spatial database in a collaborative workspace environment.</li>
 											<li>Produced cartographic products following journal guidelines using ArcGIS.</li>
-											<li>Investigated the influence managed greater sage-grouse (GSG) areas has on metrics of avian diversity over time.</li>
+											<li>Investigated the influence managed greater sage-grouse (GSG) areas have on metrics of avian diversity over time.</li>
 											<li>Helped land managers and conservationists better plan to protect GSG as an umbrella
 												species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
 										</ul>
@@ -400,7 +400,7 @@
 											<li>Integrated field data with spatial data for statistical analyses; interpreted results.</li>
 										</ol>
 										<ul>
-											<li>Investigated the influence forest composition and configuration has on the prevalence of avian Malaria as part of long-term research of complex socio-ecological issues in the content of global climate change.</li>
+											<li>Investigated the influence forest composition and configuration has on the prevalence of avian Malaria as part of long-term research of complex socio-ecological issues in the context of global climate change.</li>
 										</ul>
 										<ol>
 											<li>Collected GPS data, mist netted, live handled and identified avians, collected avian morphometric data and
@@ -435,7 +435,7 @@
 											<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
 												collected ear tissue samples and morphometric data
 												(e.g., sex, weight, total length, hind foot length, tail length, ear size).
-											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 											<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
 											<li>Set mist nets, identified bat species, and collected morphometric data
 												(e.g., sex, weight, total length, wing span).</li>
@@ -457,7 +457,7 @@
 											<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
 										</ul>
 										<ol>
-											<li>Collected GPS data, measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											<li>Collected GPS data, measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 											<li>Set acoustic monitors and camera traps.</li>
 										</ol>
 										<ul>
@@ -475,7 +475,7 @@
 									<td>
 										<i>Tarquinia, Italy</i><br>
 										<ul>
-											<li>Actively conducted fieldwork and lab work with project manager and local collaborators.</li>
+											<li>Actively conducted fieldwork and lab work with the project manager and local collaborators.</li>
 										</ul>
 										<ol>
 											<li>Utilized mobile genetics lab to extract DNA from fecal and tissue samples.</li>
@@ -484,7 +484,7 @@
 											<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
 												collected ear tissue samples and morphometric data
 												(e.g., sex, weight, total length, hind foot length, tail length, ear size).
-											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 											<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
 										</ol>
 										<ul>
@@ -521,7 +521,7 @@
 										</ul>
 										<ol>
 											<li>Collected GPS data and set Sherman transects for small mammal trapping.</li>
-											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2022</td>
@@ -530,11 +530,11 @@
 									<td>
 										<i>Quail Reintroduction at Lewisville Lake Environmental Learning Area <font color="#afbcc0">•</font> Denton, Texas</i>
 										<ul>
-											<li>Volunteered 30 hours to assist a colleague with field data collection.</li>
+											<li>Volunteered 30 hours to actively assist a colleague with field data collection.</li>
 										</ul>
 										<ol>
 											<li>Collected GPS data, telemetry, triangulation, and identified quail mortalities.</li>
-											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">September 2021</td>
