--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 											<li>Addressed complex biocultural conservation issues in one of the world's most pristine ecosystems.</li>
 										</ul>
 										<ol>
-											<li>Focused on topics of climate change, disease ecology, avian hosts and insect vectors,
+											<li>Research and discussions focused on topics of climate change, disease ecology, avian hosts and insect vectors,
 												habitat structure, threats to biodiversity conservation, socio-cultural perspectives on biodiversity,
 												biocultural diversity, ecological processes, and biodiversity assessments.</li>
 										</ol>
