--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 						</div>
 					</section>
 
-					<!-- POSTER PRESENTATIONS -->
+					<!-- PRESENTATIONS -->
 					<section>
 						<h6>Presentations</h6>
 						<div class="table-wrapper">
@@ -636,6 +636,37 @@
 							</table>
 						</div>
 					</section>
+
+					<section>
+						<h6>Professional Memberships & Organizations</h6>
+						<div class="table-wrapper">
+							<table>
+								<col style="width:85%">
+								<col style="width:15%">
+								<thead>
+								<tr>
+								</tr>
+								</thead>
+								<tbody>
+								<tr>
+									<td>
+										<b>The Wildlife Society</b><br>
+										<p>North America</p>
+
+									</td>
+									<td style="text-align: center; vertical-align: middle;">2022</td>
+								</tr>
+								<tr>
+									<td><b>Society for Ecological Restoration</b><br>
+										<p>UNT Student Chapter</p>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">2022</td>
+								</tr>
+								</tfoot>
+							</table>
+						</div>
+					</section>
+
 <hr />
 					<!-- Footer -->
 					<footer id="footer">
