--- a/index.html
+++ b/index.html
@@ -679,9 +679,7 @@
 								</ul>
 
 							</section>
-							<ul class="copyright">
-								<p>&copy; 2023 Amanda M Long</a></p>
-							</ul>
+							<ul class="copyright">&copy; 2023 Amanda M Long</ul>
 						</div>
 					</footer>
 			</div>
