--- a/index.html
+++ b/index.html
@@ -411,7 +411,8 @@
 											<li>Used Model Builder to consistently facilitate spatial processes across nine landscapes.</li>
 										</ol>
 										<ul>
-											<li>Independently conducted spatial and statistical analyses to assess the influence human land uses has on nine endangered, vulnerable, and near-threatened cat populations</li>
+											<li>Independently conducted spatial and statistical analyses to assess the influence human land uses
+												has on nine endangered, vulnerable, and near-threatened cat populations.</li>
 											<li>Reviewed pertinent literature to collect species-specific dispersal data;
 												applied home range estimates as a proxy for dispersal.</li>
 										</ul>
