--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 								</thead>
 
 								<tr>
-									<td><b>Global Corridor Efficacy Assessment</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
+									<td><b>Global Corridor Efficacy Project</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
 										<i>Managua, Nicaragua</i><br>
 										<ul>
 											<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
