--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@
 
 										</ul>
 										<ol>
-											<li>Collected GPS data; mist netted, live handled, and identified avians to collect morphometric data and
-												blood samples; detected malaria using DNA extraction of blood samples and PCR amplification; optimized PCR primers.</li>
+											<li>Collected GPS data; mist netted, live handled, and identified avian species to collect blood samples and morphometric data
+											(e.g., age, sex, weight, tail length, wing length, tarsus length, and bill length, width, and height).</li>
+											<li>Detected malaria using DNA extraction of blood samples and PCR amplification; optimized PCR primers.</li>
 											<li>Set black fly and mosquito traps to collect bug samples; identified malaria parasites in blood smears using microscopy.</li>
 										</ol>
 										<ul>
@@ -451,7 +452,7 @@
 											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 											<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
 											<li>Set mist nets, identified bat species, and collected morphometric data
-												(e.g., sex, weight, total length, wing span).</li>
+												(e.g., sex, weight, total length, wingspan).</li>
 										</ol>
 										<ul>
 											<li>Established and maintained strong working relationships with partners in academia and local communities.</li>
