--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 									<td style="text-align: center; vertical-align: middle;">April 2018</td>
 								<tr>
 								<td>
-									<i>The effect different concentrations of NaCl has on plant root peroxidase <font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
+									<i>The effect different concentrations of NaCl have on plant root peroxidase <font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
 									<ul>
 										<li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
 										<li>Planted seeds in a growth chamber to measure the effect various NaCl concentrations
