--- a/index.html
+++ b/index.html
@@ -558,14 +558,14 @@
 										<b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
 										<i>Mice DNA Barcoding <font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
 										<ul>
-											<li>Designed and presented a poster at the MMC 3rd Annual Student Showcase.</li>
+											<li>Designed and presented a poster of research methods and results at the MMC 3rd Annual Student Showcase.</li>
 										</ul>
 										<ol>
 											<li>Received Student Showcase Award.</li>
 										</ol>
 										<ul>
-											<li>Extracted mice tissue samples, PCR, and gel electrophoresis; sent samples out for sequencing.</li>
-											<li>Compared and aligned sequences among taxa; inferred evolutionary relationships.</li>
+											<li>Sequenced mice DNA using extraction of tissue samples and PCR amplification.</li>
+											<li>Compared and aligned sequences among taxa to infer evolutionary relationships.</li>
 										</ul>
 										<ol>	
 											<li>Utilized DNA Subway, a bioinformatics pipeline, for DNA barcoding and phylogenetics.</li>
@@ -576,9 +576,9 @@
 								<td>
 									<i>The Effect Different Concentrations of NaCl have on Plant Root Peroxidase <font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
 									<ul>
-										<li>Extracted tissue samples, PCR, and gel electrophoresis, measured gene expression.</li>
-										<li>Planted seeds in a growth chamber to measure the effect various NaCl concentrations
-											has on plant roots.</li>
+										<li>Measured gene expression using DNA extraction of plant tissue samples and PCR amplification.</li>
+										<li>Evaluated the influence varying NaCl concentrations have on plant roots using seeds grown in lab growth chamber.</li>
+										<li>Designed and presented a poster of research methods and results to the MMC science department.</li>
 									</ul>
 								</td>
 									<td style="text-align: center; vertical-align: middle;">December 2017</td>
