--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 									<td>
 										<b>MMC Third Annual Student Showcase</b> (MMC)<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
-										<p class="indent">*Received Student Showcase Award</p>
+										<p class="indent">*Student Showcase Award</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">April 2018</td>
 								</tr>
