--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 						</div>
 					</section>
 
-					<!-- WORK EXPERIENCE -->
+					<!-- PROFESSIONAL EXPERIENCE -->
 					<section>
-						<h6>Work Experience</h6>
+						<h6>Professional Experience</h6>
 						<div class="table-wrapper">
 							<table>
 								<col style="width:85%">
