--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 									<td style="text-align: center; vertical-align: middle;">2022</td>
 								</tr>
 								<tr>
-									<td><b>Society for Ecological Restoration</b><br>
+									<td><b>The Society for Ecological Restoration</b><br>
 										<p>UNT Student Chapter</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">2022</td>
