--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 								</tr>
 								<tr>
 									<td><b>MMC Science Department</b> (MMC)<br>
-										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Wagner J. The effect different concentrations of NaCl has on plant root peroxidase.</p>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Wagner J. The Effect Different Concentrations of NaCl have on Plant Root Peroxidase</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">December 2017</td>
 								</tr>
