--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 						<tr>
 							<td style="text-align: center; vertical-align: middle;">
 								Geospatial Processing<br>
-								Imagery Analysis<br>
-								Programming Languages
+								Programming Languages<br>
+								Data Integration
+								
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
 								Data Management<br>
@@ -84,22 +85,22 @@
 					<dl>
 						<dt>Technical Skills</dt>
 						<dd>
-							<p>ESRI ArcGIS, Spatial Analysis, Remote Sensing, Spatial and Non-spatial
-								Data Management, Cartography, Model Builder, Data Manipulation and Analysis, Data Visualization, Digitizing,
+							<p>ESRI ArcGIS, Spatial Analysis, Imagery Analysis, Remote Sensing, Spatial and Non-spatial
+								Data Management, Cartography, ModelBuilder, Data Manipulation and Analysis, Data Visualization, Digitizing,
 								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting,
 								Excel, PowerPoint, Word, Access, Google Earth</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
-							<p>GPS, Timber Cruise,
-								Small Mammal Trapping and Handling, Mist Netting, Bird Handling,
+							<p>GPS, Timber Cruise, Small Mammal Trapping and Handling, Mist Netting, Bird Handling,
+								Morphometric Data Collection, Species Identification, 
 								Radio Telemetry, Acoustic Monitoring, Camera Trapping,
-								Remote Fieldwork, Integration with GIS</p>
+								Remote Fieldwork</p>
 						</dd>
 						<dt>Soft Skills</dt>
 						<dd>
-							<p>Adaptable, Attention to Detail, Collaboration, Communication,
-								Creative,Presentation Development, Project Management,
+							<p>Adaptability, Attention to Detail, Collaboration, Communication,
+								Creativity, Presentation Development, Project Management,
 								Troubleshooting, Time Management</p><br>
 						</dd>
 					</dl>
