--- a/index.html
+++ b/index.html
@@ -66,18 +66,19 @@
 							<td style="text-align: center; vertical-align: middle;">
 								Geospatial Processing<br>
 								Programming Languages<br>
-								Data Integration
+								Web Application Development
 								
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
+								Data Integration<br>
 								Data Management<br>
-								Microsoft Office Suite<br>
-								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessments</a>
+								Microsoft Office Suite
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Science Communication <br>
-								Field Data Collection <br>
-								Wildlife Handling
+								Science Communication<br>
+								Field Data Collection<br>
+								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessments</a>
+								
 							</td>
 						</tr>
 						</tfoot>
