--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 								
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Data Integration<br>
-								Data Management<br>
-								Microsoft Office Suite
+								Cartography<br>
+								Science Communication<br>
+								Pedagogy
 							</td>
 							<td style="text-align: center; vertical-align: middle;">
-								Science Communication<br>
+								Data Analysis<br>
 								Field Data Collection<br>
 								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessments</a>
 								
@@ -87,9 +87,9 @@
 						<dt>Technical Skills</dt>
 						<dd>
 							<p>ESRI ArcGIS, Spatial Analysis, Imagery Analysis, Remote Sensing, Spatial and Non-spatial
-								Data Management, Cartography, ModelBuilder, Data Manipulation and Analysis, Data Visualization, Digitizing,
-								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting,
-								Excel, PowerPoint, Word, Access, Google Earth</p>
+								Data Management, Data Inegration, Cartography, Data Manipulation, Data Visualization and Analysis, Digitizing,
+								Python, SQL, R, HTML, CSS, JavaScript, SCSS, ModelBuilder, Troubleshooting,
+								Google Earth</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
