--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<dt>Technical Skills</dt>
 						<dd>
 							<p>ESRI ArcGIS, Spatial Analysis, Imagery Analysis, Remote Sensing, Spatial and Non-spatial
-								Data Management, Data Inegration, Cartography, Data Manipulation, Data Visualization and Analysis, Digitizing,
+								Data Management, Data Integration, Data Manipulation, Data Visualization and Analysis, Digitizing,
 								Python, SQL, R, HTML, CSS, JavaScript, SCSS, ModelBuilder, Troubleshooting,
 								Google Earth</p>
 						</dd>
