--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 								</tr>
 								<tr>
 									<td><b>Teaching Assistant</b> (UNT) <br>
-										<i>BIOL 1132 <font color="#afbcc0">•</font> Environmental Science for Non-majors</i><br>
+										<i>BIOL 1132 <font color="#afbcc0">•</font> Environmental Science Lab for Non-majors</i><br>
 										<ul>
 											<li>Promoted to lead TA in January 2022; aided in assessment and
 												recommendations to achieve course efficacy.
