--- a/EIA.html
+++ b/EIA.html
@@ -40,12 +40,13 @@
 									<embed src="docs\EIA Course Portfolio - AML.pdf#toolbar=0" type="application/pdf"
 										   height="625px" width="500px">
 								</span>
-								<p><center>In an <i>Environmental Impact Assessment</i> (EIA) course,
-								I created a portfolio compiled of assignments showing competency
-								and measures of mastery of ten primary EIA subjects covering the
-								principles and practices of preparing environmental
-								impact statements and assessments.</center>
-								</p>
+								<center><p>This Environmental Impact Assessment portfolio features my knowledge of
+									legislation and the principles and practices of preparing environmental
+									impact statements and assessments.</p>
+									I created this portfolio during an <i>Environmental Impact Assessment</i>
+									(EIA) course. It is compiled of assignments showing competency
+									and measures of mastery of ten primary EIA subjects.
+								</center></p>
 								<dl>
 									<dt>Competency Assignments</dt>
 									<dd>
@@ -57,13 +58,16 @@
 									</dd>
 								</dl>
 								<blockquote>"You never know a subject better than when you are expected to teach someone that subject"</blockquote>
-								<center><p>We addressed how to interpret the impacts that projects, plans,
-									and policies have the on environment as well as the resultant impacts on resources,
-									ecosystems, and communities. <br>
-									We examined methodologies for identifying impacts,
+								<center>
+									For Mastery Assignments, I developed questions and scenarios in the state of Michigan
+									(when feasible), as I am building my career here.<br>
+									<p>I learned how to interpret the impacts that projects, plans,
+									and policies have the on environment as well as the resultant impacts on resources
+									ecosystems, and communities.
+									I examined the methodologies for identifying impacts,
 									describing affected environments, predicting and assessing impacts, and selecting a proposed
-									action from a group of alternative actions that meets a specific need.</p></center>
-
+									action from a group of alternative actions that meets a specific need.<br>
+								</center>
 								<hr />
 
 								<dl>
