--- a/index.html
+++ b/index.html
@@ -120,8 +120,12 @@
 								<tr>
 									<td>
 									<b>Master of Science</b> | <b>Biology</b><br>
-										University of North Texas (UNT)<font color="#afbcc0"> • </font>Denton, Texas<br>
-										<p class="indent2">Thesis: <i>Conservation, Connectivity, and Coexistence: Understanding Corridor Efficacy in Fragmented Landscapes</i></p>
+									University of North Texas (UNT)<font color="#afbcc0"> • </font>Denton, Texas<br>
+										<dl>
+											<dd>
+											Thesis: <i>Conservation, Connectivity, and Coexistence: Understanding Corridor Efficacy in Fragmented Landscapes</i></p>
+											</dd>
+										</dl>	
 									</td>
 									<td style="text-align: center; vertical-align: middle;">December 2022</td>
 								</tr>
@@ -129,7 +133,11 @@
 									<td>
 										<b>Bachelor of Science</b> | <b>Ecology, Evolution, Conservation Biology</b><br>
 										Central Michigan University (CMU)<font color="#afbcc0"> • </font>Mount Pleasant, Michigan<br>
-										<p class="indent2">Thesis: <i>The Steppingstones of Dispersal in Felidae</i>
+										<dl>
+											<dd>										
+											Thesis: <i>The Steppingstones of Dispersal in Felidae</i>
+											</dd>
+										</dl>	
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2020</td>
 								</tr>
