--- a/index.html
+++ b/index.html
@@ -625,15 +625,34 @@
 								<tbody>
 								<tr>
 									<td>
-										<b>MMC Third Annual Student Showcase</b> (MMC)<br>
-										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
-										<p class="indent">*Student Showcase Award</p>
+										<b>The Wildlife Society’s 29th Annual Conference</b><font color="#afbcc0"> • </font>Spokane, Washington<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Spence ES, Travis J, Beier P, Gregory AJ, Bullock J.
+											<i>An enhanced Methodology for Applied Modeling of Structural and Functional Connectivity.</p>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">November 2022</td>
+								</tr>
+								<tr>
+									<td>
+										<b>Advanced Environmental Research Institute Welcome Back Event</b><font color="#afbcc0"> • </font>Denton, Texas<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Spence ES, Travis J, Beier P, Gregory AJ, Bullock J.
+											<i>Do wildlife corridors conserve wildlife?</p>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">August 2022</td>
+								</tr>
+								<tr>
+									<td>
+										<b>MMC Third Annual Student Showcase</b><font color="#afbcc0"> • </font>Mount Pleasant, Michigan<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Johnson L, Wagner J.
+											<i>Mice DNA barcoding</i>.</p>
+										<p class="indent">*Received Student Showcase Award</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">April 2018</td>
 								</tr>
 								<tr>
-									<td><b>MMC Science Department</b> (MMC)<br>
-										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Wagner J. The Effect Different Concentrations of NaCl have on Plant Root Peroxidase</p>
+									<td>
+										<b>MMC Science Department</b><font color="#afbcc0"> • </font>Mount Pleasant, Michigan<br>
+										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Lombard A, Wagner J.
+											<i>The Effects Different Concentrations of NaCl have on Plant Root Peroxidase.</i></p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">December 2017</td>
 								</tr>
