--- a/index.html
+++ b/index.html
@@ -674,15 +674,16 @@
 								<tbody>
 								<tr>
 									<td>
-										<b>The Wildlife Society</b><br>
-										<p>North America</p>
+										<b>The Wildlife Society</b>
+										<font color="#afbcc0"> • </font>North America
 
 									</td>
 									<td style="text-align: center; vertical-align: middle;">2022</td>
 								</tr>
 								<tr>
-									<td><b>The Society for Ecological Restoration</b><br>
-										<p>UNT Student Chapter</p>
+									<td>
+										<b>The Society for Ecological Restoration</b>
+										<font color="#afbcc0"> • </font>UNT Student Chapter
 									</td>
 									<td style="text-align: center; vertical-align: middle;">2022</td>
 								</tr>
