--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 								<tr>
 									<td>
 										<b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
-										<i>Mice DNA Barcoding <font color="#afbcc0">•</font> Mount Pleasant, MI</i><br>
+										<i>Mice DNA Barcoding</i> <font color="#afbcc0">•</font> Mount Pleasant, MI<br>
 										<ul>
 											<li>Designed and presented a poster of research methods and result sat the MMC 3rd Annual Student Showcase.</li>
 										</ul>
