--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 								</tr>
 								<tr>
 									<td>
-										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at Range-Wide Scales</i><br>
+										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
 											<li>Optimized >2,400 data points for spatial and statistical analysis.</li>
 											<li>Developed R scripts for statistical analysis and uniform data visualization.</li>
