--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 								</tr>
 								<td>
 									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
+									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Global Conservation Efforts</i>
 									<ul>
 										<li>Debugged scripts for statistical analyses; promptly shared with colleagues.</li>
 										<li>Produced a publishable unit (in prep) from an assignment in a graduate Conservation Biology course.</li>
