--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<dl>
 						<dt>Technical Skills</dt>
 						<dd>
-							<p>ArcGIS, Spatial Analysis, Remote Sensing, Spatial and Non-spatial
+							<p>ArcGIS, Spatial Analysis, Image Analysis, Remote Sensing, Spatial and Non-spatial
 								Data Management, Cartography, Model Builder, Data Manipulation and Analysis, Data Visualization, Digitizing,
 								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting,
 								Excel, PowerPoint, Word, Access, Google Earth</p>
