--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
 													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
 										</ol>
 										<ul>
-											<li>Supervised environmental sampling methods in a lab/field setting for 11-course sections with ~24 students.</li>
+											<li>Supervised environmental sampling exercises, synthesized data, and led discussions to interpret results in a 
+												lab/field setting for 11-course sections with ~24 students per section.</li>
 										</ul>
 										<ol>
 											<li>Measured dissolved oxygen, contaminant levels, and pH to assess and compare municipal and pond water quality.</li>
