--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 										<li>Scouted landscapes to identify areas suitable for field data collection and spatial modeling following project protocols.</li>
 									</ol>
 									<ul>
-										<li>Actively trained colleagues in best practices for utilizing ArcGIS, troubleshooting, and data management to meet their project objectives. </li>
+										<li>Actively trained colleagues in best practices for utilizing ArcGIS and R, troubleshooting, and data management to meet their project objectives. </li>
 										<li>Maintained responsibility for administrating geospatial lab computers to facilitate program use.</li>
 									</ul>
 								</td>
