--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
 								<tr>
 									<td>
 										<ul>
-											<li>Optimized >4,500 GPS points to integrate with landscape-scale spatial analysis;
-												analyzed satellite imagery to digitize landscape boundaries.</li>
+											<li>Optimized >4,500 GPS points to integrate with landscape-scale spatial analysis.</li>
+											<li>Analyzed satellite imagery and digitized forest and rangeland boundaries.</li>
 											<li>Assessed current GIS technologies to apply the best and develop new spatial processes to meet project objectives.</li>
 										</ul>
 										<ol>
