--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
 											<li>Thoroughly documented methodological approaches and troubleshooting. </li>
 										</ol>
 										<ul>
+										<li>Provided scientific and technical spatial support for the project in conjunction with field data and genetic analysis.</li>
 											<li>Gathered, created, analyzed, organized, and presented geospatial data for the project team;
 												implemented feedback to meet multi-user objectives.</li>
 										</ul>
