--- a/index.html
+++ b/index.html
@@ -366,9 +366,10 @@
 											<li>Analyzed imagery, classified land covers, corrected errors, and assessed accuracies to produce overall accuracies ≥ 92% using ArcGIS.</li>
 										</ol>
 										<ul>
-											<li>Quantified landscape connectivity using resistance-based connectivity models in ArcGIS and <i>Circuitscape</i>.</li>
+											<li>Quantified landscape connectivity using resistance raster connectivity models in ArcGIS and <i>Circuitscape</i>.</li>
 										</ul>
 										<ol>
+											<li>◦	Extensively reviewed literature to develop expert literature-based models for small mammals.</li>
 											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy.</li>
 										</ol>
 										<ul>
@@ -389,13 +390,22 @@
 								</tr>
 								<td>
 									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Global Conservation Efforts</i>
+									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 									<ul>
-										<li>Debugged scripts for statistical analyses; promptly shared with colleagues.</li>
-										<li>Produced a publishable unit (in prep) from an assignment in a graduate Conservation Biology course.</li>
-										<li>Reviewed pertinent literature to collect species demographic data for statistical analyses.</li>
-										<li>Managed project database in a collaborative workspace environment.</li>
+										<li>Produced cartographic and data-driven products that support land and wildlife management decision-making.</li>
+									</ul>
+									<ol>
+										<li>Designed a map using ArcGIS; debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
+									</ol>
+									<ul>
+										<li>Thoroughly reviewed pertinent literature to develop research question(s) and collect subspecies demographic data for statistical analysis.</li>
+									</ul>
+									<ol>
 										<li>Assessed the influence varying levels of human disturbance have on the viability of three geographically distinct tiger populations.</li>
+										<li>Produced a publishable unit (in prep) from an assignment in a graduate Conservation Biology course.</li>
+									</ol>
+									<ul>
+										<li>Actively managed project database in a collaborative workspace environment.</li>
 									</ul>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
@@ -404,16 +414,23 @@
 									<td>
 										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
-											<li>Optimized >2,400 data points for spatial and statistical analysis.</li>
-											<li>Developed R scripts for statistical analysis and uniform data visualization.</li>
-											<li>Managed project database in a collaborative workspace environment.</li>
-											<li>Investigated the influence managed greater sage-grouse (GSG) areas have on metrics of avian diversity over time.</li>
-											<li>Helped land managers and conservationists better plan to protect GSG as an umbrella
-												species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
+											<li>Optimized >2,400 spatial data points for spatial and statistical analysis; mined Breeding Bird Survey data via Pythonic tool.</li>
+											<li>Produced cartographic and data-driven products that support land and wildlife management decision-making.</li>
+										</ul>
+										<ol>
+											<li>Designed a map using ArcGIS; developed R scripts for statistical analysis and uniform data visualization.</li>
 											<li>Featured as the first study conducted by
 												<a target="_blank" rel="noopener noreferrer" href="https://savebirds.app/#">
 													<i>SaveBirds</i></a>.</li>
+										</ol>
+										<ul>
+											<li>Actively managed project database in a collaborative workspace environment.</li>
+											<li>Investigated the influence managed greater sage-grouse (GSG) areas have on metrics of avian diversity over time.</li>
 										</ul>
+										<ol>
+											<li>Helped land managers and conservationists better plan to protect GSG as an umbrella
+												species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
+										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
 								</tr>
@@ -433,13 +450,14 @@
 										<ul>
 											<li>Independently conducted spatial and statistical analyses to assess the influence human land uses
 												has on nine endangered, vulnerable, and near-threatened cat populations.</li>
-											<li>Reviewed pertinent literature to collect species-specific dispersal data;
-												applied home range estimates as a proxy for dispersal.</li>
+											<li>Extensively reviewed pertinent literature to collect species-specific data for research objectives.</li>
 										</ul>
+										<ol>
+											<li>Developed expert literature-based models to develop resistance rasters for connectivity models.</li>
+										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2019<br> - <br>August 2020</td>
 								</tr>
-
 								</tfoot>
 							</table>
 						</div>
