--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
 												landscape-scale spatial analysis using ArcGIS.</li>
 										</ul>
 										<ol>
-											<li>Collected and manipulated open-sourced spatial data;
-												managed spatial and non-spatial databases.</li>
-											<li>Used ModelBuilder to consistently facilitate spatial processing across nine landscapes.</li>
+											<li>Consistently executed spatial analysis across nine landscapes using ModelBuilder.</li>
+											<li>Produced cartographic and data-driven products using open-sourced spatial data.</li>
+											<li>Organized and managed spatial and non-spatial data.</li>
 										</ol>
 										<ul>
 											<li>Independently conducted spatial and statistical analyses to assess the influence human land uses
